fireles.ini and stats

--- a/Case/fireles.ini
+++ b/Case/fireles.ini
@@ -38,7 +38,7 @@ Nc0=70e6
 [force]
 swlspres=0
 swls=0
-lslist=thl
+lslist=thl #,qt
 swwls=0
 
 [boundary]
@@ -79,23 +79,28 @@ sigma=0.00223
 beta=2.
 
 [time]
-endtime=27000
-dt=6.
-dtmax=60.
-savetime=1800
-outputiter=50
-adaptivestep=true
-starttime=0
-rkorder=3
+	endtime=27000
+	dt=6.
+	dtmax=60.
+	savetime=1800
+	outputiter=50 #,10
+	adaptivestep=true
+	starttime=0
+	rkorder=3
 
-[stats]
-swstats=1
-sampletime=300
-masklist=ql
+	[stats]
+	swstats=1
+	sampletime=300
+	masklist=ql
+	
+	[dump]
+	swdump=0
+	sampletime=1800
+	#dumplist=ql
 
-[cross]
-swcross=1
-xy=10
-xz=1600
-crosslist=thl,s1,qlpath, s1path, thlpath
-sampletime=60
+	[cross]
+	swcross=1
+	xy=10
+	xz=1600
+	crosslist=qlpath, thlpath, qrpath
+	sampletime=60
