--- a/Case/fireles.ini
+++ b/Case/fireles.ini
@@ -54,7 +54,7 @@ z0h=0.1
 scalar_outflow=qt, s1
 
 # For time varying 2D surface input
-sbot_2d_list=thl,s1,qt
+sbot_2d_list=thl,qt
 swtimedep_sbot_2d=true
 sbot_2d_loadtime=1800
 
